package cat.udl.eps.softarch.tfgfinder.domain;public class Agree {
}
